--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 html{
-    background-color: 238, 229, 233;
+    background-color: #EEE5E9;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
