--- a/home.css
+++ b/home.css
@@ -1,7 +1,20 @@
 body {
     background-color: #EEE5E9;
     font-size: 16px;
+    color: #342E37;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+nav {
+    background-color: #af929d;
+    color: #EEE5E9;
+    padding: 10px;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
