--- a/home.css
+++ b/home.css
@@ -1,3 +1,9 @@
+.share-tech-regular {
+  font-family: "Share Tech", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
     background-color: #EEE5E9;
     font-size: 16px;
@@ -5,11 +11,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Share Tech', sans-serif;
 }
 
 nav {
-    background-color: #af929d;
-    color: #EEE5E9;
+    background-color: #383961;
     padding: 10px;
 }
 
@@ -19,11 +25,35 @@ ul{
     padding: 0;
     overflow: hidden;
     font-size: large;
-    background-color: #af929d;
 }
 
 li {
     float: right;
     margin-right: 20px;
-    color: #727072;
+    background-color: #5f718a;
+    border-radius: 8px;
+}
+
+li a {
+    display: block;
+    color: #342E37;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+li a:hover {
+    background-color: #7285a0;
+    border-radius: 8px;
+}
+
+.headline {
+    flex-direction: row;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    text-decoration: underline;
 }
